[package]
name = "icube-sdk-sys"
version = "0.1.0"
edition = "2021"
description = "Bindings for the iCube SDK C API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LucaCiucci/icube-sdk-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.2"
cc = "1.0.83"
dirs = "5.0.1"