[package]
name = "icube-sdk-sys"
version = "0.2.1"
edition = "2021"
description = "Bindings for the iCube SDK C API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LucaCiucci/icube-sdk-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.5"
log = "0.4.22"